Clean line in main.

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,13 @@ ENV/
 env.bak/
 venv.bak/
 
+# Output
+out/
+.out/
+*out/
+/out
+*/out/
+
 # Spyder project settings
 .spyderproject
 .spyproject
